# CatPred

./: .env.vercel  .gitignore  .gitmodules  .vercelignore  Dockerfile  LICENSE  LICENSE.txt  README.md  batch_demo.ipynb  colab_demo.ipynb  data_utils.py  demo_run.py  environment.yml  modal_app.py  predict.py  predict.sh  prepare-catpred-db.py  reproduce_prediction.sh  reproduce_quick.sh  reproduce_training.sh  requirements.txt  run  run-catpred.py  setup.cfg  setup.py  single_demo-2.ipynb  single_demo.ipynb  split-catpred-db.py  train.py  vercel.json
.github/workflows/: ci.yml  deploy-modal.yml
api/: index.py
catpred/: __init__.py  args.py  multitask_utils.py  nn_utils.py  utils.py
catpred/data/: __init__.py  cache_utils.py  data.py  utils.py  (+3 more)
data/: organism_to_taxid.json
demo/: batch_kcat.csv  batch_kcat_input.csv  batch_kcat_input.json  batch_kcat_input_output.csv  batch_ki.csv  batch_km.csv  structures.txt  structures_embeds.pt  structures_embeds_dict.pt
examples/: input.csv
reproduce_publication_results/: README.md
scripts/: analyze_ablation.py  analyze_ensemble.py  analyze_ensemble.sh  analyze_reproduce.py  baseline_analysis.py  benchmark_inference.py  create_pdbrecords.py  evaluate_predictions.py  fig3b_fig4_figS1_figS2.sh  fig5.sh  fig5_figS7.sh  fig6.sh  fig6_figS8.sh  figS10_figS11.sh  figS3.sh  plot_fig3b_fig4_figS1_figS2.py  plot_fig5_figS7.py  plot_fig6_figS8.py  plot_figS10_figS11.py  plot_figS3.py  plot_figS9.py  reproduce_ablation.sh  reproduce_fig5_baseline.sh  reproduce_fig5_catpred.sh  reproduce_fig5_dlkcat.sh  reproduce_fig5_unikp.sh  reproduce_figS10_catpred.sh  reproduce_figS10_unikp.sh  reproduce_figS11_catpred.sh  reproduce_figS11_unikp.sh  reproduce_figS3_catpred.sh  reproduce_uncertainty.sh  uncertainty_analysis.py
tests/: test_esm_batching.py  test_inference_fast_path.py  test_postprocess_predictions.py
(+96 files in other folders)
