[metadata]
name = catpred
version = 0.0.1
author = 
author_email = 
license = MIT
description = 
keywords =
    protein language model
    machine learning
    enzyme function prediction
    message passing neural network
url = https://github.com/maranasgroup/catpred/
download_url = https://github.com/maranasgroup/catpred/v_0.0.1.tar.gz
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
project_urls =
    Documentation = 
    Source = https://github.com/maranasgroup/catpred
    PyPi = 
    Demo = http://tiny.cc/catpred

[options]
packages = find:
install_requires =
    flask>=1.1.2
    hyperopt>=0.2.3
    matplotlib>=3.1.3
    numpy>=1.18.1
    pandas>=1.0.3
    pandas-flavor>=0.2.0
    scikit-learn>=0.22.2.post1
    scipy>=1.4.1
    sphinx>=3.1.2
    tensorboardX>=2.0
    torch>=1.4.0
    tqdm>=4.45.0
    typed-argument-parser>=1.6.1
    rdkit>=2020.03.1.0
    descriptastorus
python_requires = >=3.7

[options.entry_points]
console_scripts =
    catpred_train=catpred.train:catpred_train
    catpred_predict=catpred.train:catpred_predict
    catpred_fingerprint=catpred.train:catpred_fingerprint
    catpred_hyperopt=catpred.hyperparameter_optimization:catpred_hyperopt
    catpred_interpret=catpred.interpret:catpred_interpret
    catpred_web=catpred.web.run:catpred_web
    sklearn_train=catpred.sklearn_train:sklearn_train
    sklearn_predict=catpred.sklearn_predict:sklearn_predict

[options.extras_require]
test = pytest>=6.2.2; parameterized>=0.8.1

[options.package_data]
catpred = py.typed
